[package]
name = "echors"
version = "0.0.2-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config-file = "0.2.3"
dashmap = "5.5.0"
fasthash = "0.4.0"
futures = "0.3.28"
lazy_static = "1.4.0"
num = "0.4.1"
num-derive = "0.4.0"
num-traits = "0.2.16"
parking_lot = "0.12.1"
rand = "0.8.5"
serde = {version = "1.0.178", features=["derive"]}
string-builder = "0.2.0"
tokio = { version = "1.29.1", features = ["full"]} 
uuid = { version = "1.4.1", features = ["v4","arbitrary"]}
